turtleart.lessons.turtleart.Main.House.scala.error
Source:6: error: missing arguments for method setX in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	x = setX
            ^Source:7: error: missing arguments for method setY in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	y = setY
            ^