turtleart.lessons.turtleart.Main.House.scala.code
override def run() {
	var x = 0
	var y = 0

	x = setX
	y = setY
	
	for(c <- 1 to 4)
	{
		avance(100)
		droite(90)
	}
	avance (100)
	droite (30)
	for (c <- 1 to 2)
	{
		avance (100)
		droite(120)
	}
	droite(90)
	setPos(x,y)
}
